fixed on small screens

--- a/pages/Contact.css
+++ b/pages/Contact.css
@@ -124,11 +124,11 @@ input[type="submit"]:hover {
 }
 
 .links-wrapper{
-position: fixed;
+/* position: fixed;
 bottom: 0;
 left:50%;
+transform: translate(-50%, -50%); */
 font-size: 2rem;
-transform: translate(-50%, -50%);
 }
 
 .links-wrapper > *:hover {
